added contact details and projects

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <a href="#My projects">My projects</a>
                 </li>
                 <li class="menu">
-                    <a href="#">Contact</a>
+                    <a href="#Contact me">Contact</a>
                 </li>
             </ul>
         </nav>
@@ -45,7 +45,37 @@
         </section>
 
         <section id="My projects">
+            <h2>My projects</h2>
+            <div class="main-project">
+                <h3>Website development</h3>
+                <a href="https://weareserious.co.uk" target="_blank">
+                    <img id="webdev" src="./assets/images/serious-website.png" alt="website designed by Cyprian">
+                </a>
+            </div>
 
+            <div class="ERP">
+                <h3>Remit ERP</h3>
+                <a href="https://moneytransfer.bracsaajanexchange.com/remiterp/" target="_blank">
+                    <img id="ERP" src="./assets/images/remit-erp.png" alt="Enterprise Resource Planning designed by Cyprian">
+                </a>
+            </div>
+
+            <div class="seo">
+                <h3>SEO</h3>
+                <a href="https://capg84.github.io/c1-horiseon-refactor/" target="_blank">
+                    <img id="SEO" src="./assets/images/seo-test.png" alt="Website optimized for serach engines by Cyprian">
+                </a>
+            </div>
+
+        </section>
+
+        <section id="Contact me">
+            <h2>Contact me</h2>
+            <ul>
+                <li class="Contact">email: <a href="mailto:cyprian.gomes@live.co.uk">cyprian.gomes@live.co.uk</li>
+                <li class="Contact">mobile: <a href="tel:+447545839711">+44 7545 839 711</a></li>
+                <li class="Contact">Social: <a href="https://github.com/capg84">GitHub</a></li>
+            </ul>
         </section>
     </main>
     
