updated CSS file to make the page responsive

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
                     <a href="#About Me"> About me</a>
                 </li>
                 <li class="menu">
-                    <a href="#My projects">My projects</a>
+                    <a href="#My-projects">My projects</a>
                 </li>
                 <li class="menu">
-                    <a href="#Contact me">Contact</a>
+                    <a href="#contact-me">Contact</a>
                 </li>
             </ul>
         </nav>
@@ -44,7 +44,7 @@
             </p>
         </section>
 
-        <section id="My projects">
+        <section id="My-projects">
             <h2>My projects</h2>
             <div class="main-project">
                 <h3>Website development</h3>
@@ -52,24 +52,25 @@
                     <img id="webdev" src="./assets/images/serious-website.png" alt="website designed by Cyprian">
                 </a>
             </div>
+        </section>
 
-            <div class="ERP">
+        <section class="small-projects">
+            <div class="erp">
                 <h3>Remit ERP</h3>
                 <a href="https://moneytransfer.bracsaajanexchange.com/remiterp/" target="_blank">
-                    <img id="ERP" src="./assets/images/remit-erp.png" alt="Enterprise Resource Planning designed by Cyprian">
+                    <img id="erpimg" src="./assets/images/remit-erp.png" alt="Enterprise Resource Planning designed by Cyprian">
                 </a>
             </div>
 
             <div class="seo">
                 <h3>SEO</h3>
                 <a href="https://capg84.github.io/c1-horiseon-refactor/" target="_blank">
-                    <img id="SEO" src="./assets/images/seo-test.png" alt="Website optimized for serach engines by Cyprian">
+                    <img id="seoimg" src="./assets/images/seo-test.png" alt="Website optimized for serach engines by Cyprian">
                 </a>
             </div>
-
         </section>
 
-        <section id="Contact me">
+        <section id="contact-me">
             <h2>Contact me</h2>
             <ul>
                 <li class="Contact">email: <a href="mailto:cyprian.gomes@live.co.uk">cyprian.gomes@live.co.uk</li>
