--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
         <section id="contact-me">
             <h2>Contact me</h2>
-            <ul>
+            <ul class="contact">
                 <li class="contact">email: <a href="mailto:cyprian.gomes@live.co.uk">cyprian.gomes@live.co.uk</li>
                 <li class="contact">mobile: <a href="tel:+447545839711">+44 7545 839 711</a></li>
                 <li class="contact">Social: <a href="https://github.com/capg84">GitHub</a></li>
