updated font size for contact me icons

--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
         <section id="contact-me">
             <h2>Contact me</h2>
             <ul class="contact">
-                <li class="contact"><i style="font-size:24px; padding-right: 10px;" class="fa">&#xf0e0;</i> <a href="mailto:cyprian.gomes@live.co.uk">cyprian.gomes@live.co.uk</a></li>
-                <li class="contact"><i class="fa fa-phone" style="font-size:24px; padding-right: 10px;"></i> <a href="tel:+447545839711">+44 7545 839 711</a></li>
-                <li class="contact"><i class="fa fa-github" style="font-size:24px; padding-right: 10px;"></i> <a href="https://github.com/capg84">GitHub</a></li>
+                <li><i class="fa" style="font-size:20px; padding-right: 10px;">&#xf0e0;</i> <a href="mailto:cyprian.gomes@live.co.uk">cyprian.gomes@live.co.uk</a></li>
+                <li><i class="fa fa-phone" style="font-size:20px; padding-right: 10px;"></i> <a href="tel:+447545839711">+44 7545 839 711</a></li>
+                <li><i class="fa fa-github" style="font-size:20px; padding-right: 10px;"></i> <a href="https://github.com/capg84">GitHub</a></li>
             </ul>
 
             <div class="contact-me-mobile">
