added new project on the portfolio

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
             <h2>My projects</h2>
             <div class="main-project">
                 <h3>Website development</h3>
-                <a href="https://weareserious.co.uk" target="_blank">
-                    <img id="webdev" src="./assets/images/serious-website.png" alt="website designed by Cyprian">
+                <a href="https://capg84.github.io/holiday-planner/index.html" target="_blank">
+                    <img id="webdev" src="./assets/images/Destination-Guide.png" alt="website designed by Cyprian">
                 </a>
             </div>
         </section>
@@ -74,8 +74,8 @@
 
             <div class="seo">
                 <h3>SEO</h3>
-                <a href="https://capg84.github.io/c1-horiseon-refactor/" target="_blank">
-                    <img id="seoimg" src="./assets/images/seo-test.png" alt="Website optimized for serach engines by Cyprian">
+                <a href="https://weareserious.co.uk" target="_blank">
+                    <img id="seoimg" src="./assets/images/serious-website.png" alt="Website optimized for serach engines by Cyprian">
                 </a>
             </div>
         </section>
