added new project

--- a/index.html
+++ b/index.html
@@ -49,28 +49,36 @@
         <section id="competencies">
             <h3>My competencies</h3>
             <p class="skills">
-                HTML &#9899 CSS &#9899 MS SQL &#9899 MS Excel &#9899 UI/UX &#9899 
-                Agile PM framework &#9899 Business analysis &#9899 Requirement gathering
+                HTML &#9899 CSS &#9899 MS SQL &#9899 Node.js &#9899 Express.js &#9899 MySQL &#9899 MVC &#9899 MS Excel &#9899 UI/UX 
+                &#9899 Agile PM framework &#9899 Business analysis &#9899 Requirement gathering
             </p>
         </section>
 
         <section id="my-projects">
             <h2>My projects</h2>
             <div class="main-project">
-                <h3>Website development</h3>
-                <a href="https://capg84.github.io/holiday-planner/index.html" target="_blank">
-                    <img id="webdev" src="./assets/images/Destination-Guide.png" alt="website designed by Cyprian">
+                <h3>Full Stack Web Application</h3>
+                <a href="https://calm-gorge-52770.herokuapp.com" target="_blank">
+                    <img id="webdev" src="./assets/images/tradr-app.png" alt="website designed by Cyprian">
                 </a>
             </div>
         </section>
 
         <section class="small-projects">
             <div class="erp">
+                <h3>Website development</h3>
+                <a href="https://capg84.github.io/holiday-planner/index.html" target="_blank">
+                    <img id="erpimg" src="./assets/images/Destination-Guide.png" alt="website designed by Cyprian">
+                </a>
+            </div>
+        
+        <!-- <section class="small-projects">
+            <div class="erp">
                 <h3>Remit ERP</h3>
                 <a href="https://moneytransfer.bracsaajanexchange.com/remiterp/" target="_blank">
                     <img id="erpimg" src="./assets/images/remit-erp.png" alt="Enterprise Resource Planning designed by Cyprian">
                 </a>
-            </div>
+            </div> -->
 
             <div class="seo">
                 <h3>SEO</h3>
